This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Launcher does not validate major versions
Type: behavior Stage: resolved
Components: Windows Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: bgerrity, ned.deily, paul.moore, serhiy.storchaka, steve.dower, tim.golden, zach.ware
Priority: normal Keywords: patch

Created on 2018-09-02 20:03 by bgerrity, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9037 merged bgerrity, 2018-09-02 21:54
PR 9065 merged miss-islington, 2018-09-04 16:35
Messages (8)
msg324483 - (view) Author: Brendan Gerrity (bgerrity) * Date: 2018-09-02 20:03
When a version argument is passed to the launcher (e.g. `py -3.4` or `py -7.0`), contrary to the launcher help text, the major version isn't validated as 2 or 3.
msg324494 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-09-03 05:34
What is wrong with supporting version 7.0?
msg324495 - (view) Author: Brendan Gerrity (bgerrity) * Date: 2018-09-03 05:54
The function's comment says otherwise; I just noticed when I was messing with 34565. Supporting arbitrary major versions makes the -0 arg ambiguous so alternatively that could be the special case?
msg324496 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-09-03 06:20
Wouldn't be better to fix a comment?
msg324500 - (view) Author: Brendan Gerrity (bgerrity) * Date: 2018-09-03 07:27
Added a commit that just changes the comment.
msg324595 - (view) Author: Steve Dower (steve.dower) * (Python committer) Date: 2018-09-04 16:35
New changeset 3876af4f7c2ef87db6d2d83efc229955968926dd by Steve Dower (Brendan Gerrity) in branch 'master':
bpo-34565: Change a PC/launcher.c comment to accurately describe valid major versions. (GH-9037)
https://github.com/python/cpython/commit/3876af4f7c2ef87db6d2d83efc229955968926dd
msg327208 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2018-10-06 02:18
New changeset 28dd737c46d50f4952c61651426c69cc43991bfa by Ned Deily (Miss Islington (bot)) in branch '3.7':
bpo-34565: Change a PC/launcher.c comment to accurately describe valid major versions. (GH-9037) (GH-9065)
https://github.com/python/cpython/commit/28dd737c46d50f4952c61651426c69cc43991bfa
msg327804 - (view) Author: Ned Deily (ned.deily) * (Python committer) Date: 2018-10-15 23:18
I assume we can close this now.  Thanks, all!
History
Date User Action Args
2022-04-11 14:59:05adminsetgithub: 78746
2018-10-15 23:18:30ned.deilysetstatus: open -> closed
resolution: fixed
messages: + msg327804

stage: patch review -> resolved
2018-10-06 02:18:45ned.deilysetnosy: + ned.deily
messages: + msg327208
2018-09-04 16:35:57miss-islingtonsetpull_requests: + pull_request8525
2018-09-04 16:35:54steve.dowersetmessages: + msg324595
2018-09-03 07:27:40bgerritysetmessages: + msg324500
2018-09-03 06:20:26serhiy.storchakasetmessages: + msg324496
2018-09-03 05:54:34bgerritysetmessages: + msg324495
2018-09-03 05:34:23serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg324494
2018-09-02 21:54:50bgerritysetkeywords: + patch
stage: patch review
pull_requests: + pull_request8498
2018-09-02 20:03:40bgerritycreate