bpo-34565: Validate major version in launcher

A valid major version was previously any digit sequence. This change restricts the major to either 2 or 3 to match the launcher help text.